@@ -1,3 +1,9 @@
+2005-08-02  Florian Boor  <florian.boor@kernelconcepts.de>
+
+	* gpe-nmf.c, backend/playlist_db.h,
+      backend/playlist_m3u.c: Applied patch to save playlist on exit. 
+	                          Contributed by Alberto García Hierro (Skyhusker).
+
 2005-08-01  Florian Boor  <florian.boor@kernelconcepts.de>
 
     * gstplayer.c, frontend.h: Apply Skyhusker's patch to fix a segfault.
